# NCCU

./: README.md
109_2/: .ex11.c.swp  .hm13.c.swp  a.in  a.py  a.txt  bonus1.c  bonus3.c  ex.in  ex04.c  ex05.c  ex06.c  ex07.c  ex08.c  ex09.c  ex10.c  ex11.c  ex11b.c  ex11c.c  ex12.c  exb.in  fn.in  fn1.c  fn2.c  fn3.c  fn4.c  fn5.c  fn6.c  hm04.c  hm05.c  hm06.c  hm07.c  hm08.c  hm09.c  hm1.in  hm10.c  hm10b.c  hm10c.c  hm11.c  hm12.c  hm13.c  (+17 more)
110_1/DS/hw1/: Dutchflagqsort.csv  Heapsort.csv  Heapsort_b.csv  Hoareqsort.csv  Lomutoqsort.csv  Lomutoqsort_b.csv  Merge.csv  Merge_b.csv  dutchflagqsort.cpp  dutchflagqsort.h  heapsort.cpp  heapsort.h  hoareqsort.cpp  hoareqsort.h  lomutoqsort.cpp  lomutoqsort.h  main.cpp  makefile  mergesort.cpp  mergesort.h  sort
110_1/DS/hw2/: Makefile  main.cpp  skiplist.cpp  skiplist.h  skiplist.h.gch  skiplist0.1_a.csv  skiplist0.1_b.csv  skiplist0.5_a.csv  skiplist0.5_b.csv  skiplist0.9_a.csv  skiplist0.9_b.csv  sort  sortedarray.cpp  sortedarray_a.csv  treap.h  treap_a.csv  treap_b.csv
110_1/DS/hw3/: Makefile  findprime.cpp  findprime2.cpp  hashtable.cpp  hashtable.h  hashtable_a.csv  hashtable_b.csv  hashtable_c.csv  hashtable_d.csv  main.cpp  sort  sortedarray.h  treap.cpp  treap_c.csv
110_1/DS/hw4/: Node.cpp  a.out  bianjie.txt  dijkstraArr.cpp  dijkstraBin.cpp  dijkstraC.cpp  dijkstraD.cpp  edge1.txt  edge100.txt  edge1000.txt  edge2.txt  edge200.txt  edge3.txt  edge300.txt  edge4.txt  edge400.txt  edge5.txt  edge500.txt  edge600.txt  edge700.txt  edge800.txt  edge900.txt  map.py  node1.txt  node100.txt  node1000.txt  node2.txt  node200.txt  node3.txt  node300.txt  node4.txt  node400.txt  node5.txt  node500.txt  node600.txt  node700.txt  node800.txt  node900.txt  slope.txt  test.txt  (+1 more)
110_1/OOP/: a.out  ex.in  ex.txt  ex10.cpp  ex5.cpp  result.txt  source.txt  test.cpp
110_1/OOP/assign1/: CardTest.cc  CardTest_  Cards.cc  Cards.h
110_2/Algorithm/: a.out  hw1.c  hw2.c  hw3.c  hw4.c  test.py
110_2/python/: CPPy_hw03.in  free_testcase.in  free_testcase.out  hw.in  hw1.py  hw10.py  hw11.py  hw2.py  hw3.py  hw4.py  hw5.py  hw6.py  hw7.py  hw8.py  hw9.py  moc1.py  test.out  test.py
111_2/CG/: hw0.cpp
111_2/CG/glfw/: CMakeLists.txt  start.cpp
111_2/CG/glfwlab/: 1-line.cpp  2-ray.cpp  CMakeLists.txt  gasket1.cpp  gasket2.cpp  gasket3.cpp  start.cpp  vec3.h
111_2/CG/hw3-swgl-trans/: CMakeLists.txt  README.txt  main.cpp
112_2/NLP/: combine.py  data.json  data_clean.py  data_gene.py  data_orpo.json  data_to_orpo.py  data_train.py  default_train_0000.parquet  main.py  newPrompt_train_data.json  new_train_data.json  nlp_final.py  raw_data.txt  record.txt  result.json  result.txt  test.json  test.py  test.txt  test2.py  test_data.json  test_data.txt  test_data_orpo.json  train-00000-of-00001-d9a274137f7fc7c8.parquet  train_data.json  train_data_orpo.json  txt_to_json.py  undone.py
(+117 files in other folders)
